vDEV
- Web app now attempts to reconnect after connection lost.

1.27
- Tweaked user data active check, believe it was incorrect and causing encounters to end mid fight.
- Fixed issue that caused initial combatant stats to be dropped.

1.26
- Fixed bug with importing ACT triggers with trailing spaces.
- Fixed issue where past encounters showed zero for all stats.</li>
- Fixed issue where one combatant was missing from past encounters (needs testing).
- Add combatant table indexes.

1.25
- Fixed further issues with DPS calculation.
- Dungeon sub bosses are now split in to seperate encounters.
- Fixed bug with importing ACT triggers.

1.24
- Fixed issues with DPS calculation.
- Tweak history page for speed.
- Fix log parsing issue that I believe resulted from last ACT plugin update.

1.23
- Added GNB to tank group (so they'll appear with blue background).
- Tweaks to encounter detection, simply to use "you obtained tomestones" message to flag clear.
- Added 'Ended' status for encounters with unknown status (zone change, etc).
- Fixed date range offset for history.

1.22
- Fix bug in stat collector.
- Log clean up goroutine.
- Add DNC/GNB icons.
- Remove check for logs in history because of slowness.

1.21
- Log file clean up function.
- Fixed timing delay issue with all trigger functions that supported delay.
- Added support to import triggers in YAML.
- Stat collector to track usage.
- History search with date range selector.

1.20
- Added ability to import and export compressed base64 triggers.
- Fixed bug in trigger enable/disable action functions.
- Added new trigger action functions, wait, set, get, log.

1.19
- Fixed a bug with ACT trigger import.
- Switched CSS preprocessor from SCSS to GCSS.
- Responsive CSS tweaks.

1.18
- Added "triggers" view with support for complex triggers and ACT import.

1.17
- Added "views" API to allow for easy creation of new interfaces.
- Numerous tweaks to encounter detection.
- Numerous tweaks to interface.