@@ -1,5 +1,7 @@
 vDEV
 - Web app now attempts to reconnect after connection lost.
+- Split player data in to seperate database table.
+- All recieved combatant data is stored and timestamped for the ability to review stats at any point of the encounter.
 
 1.27
 - Tweaked user data active check, believe it was incorrect and causing encounters to end mid fight.
